--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "dependencies": {
         "bootstrap": "5.2.2",
         "formik": "^2.2.9",
-        "node-sass": "^8.0.0",
+        "node-sass": "7",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.11.1",
-        "reactstrap": "^9.1.9"
+        "reactstrap": "^9.1.9",
+        "sass": "^1.62.1"
     },
     "devDependencies": {
         "@types/react": "^18.0.28",
